# repo-audit

./: .gitignore  README.md  pyproject.toml
src/repo_ready/: audit.py  cli.py  github.py
tests/: __init__.py  test_audit.py  test_cli.py  test_github.py
