[project]
name = "repo-audit"
version = "0.1.0"
description = "A CLI tool that audits GitHub repositories for project readiness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
repoready = "repo_ready.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_ready"]