[project]
name = "repo-audit"
version = "0.1.0"
description = "A CLI tool that audits GitHub repositories for project readiness."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.scripts]
repoready = "repo_ready.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_ready"]
